--- a/i3conf/config
+++ b/i3conf/config
@@ -8,14 +8,14 @@
 # i3 config file (v4)
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
-
 exec xrandr --output DP3 --primary
+exec compton
 
 set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+font pango:System San Fransisco Display 12
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -38,11 +38,12 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+#bindsym $mod+d exec rofi -show run -lines 3 -theme solarized
+bindsym $mod+d exec rofi -show run -lines 8 -eh 2 -width 50 -opacity "85" -bw 0 -bc "#586e75" -bg "#586e75" -fg "#fdf6e3" -hlbg "#586e75" -hlfg "#b58900" -font "System San Francisco Display 14" -fg-active-color "#fdf6e3"
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+#bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
 bindsym $mod+j focus left
@@ -94,11 +95,11 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
-set $workspace1 "1: Terminals"
-set $workspace2 "2: Firefox"
-set $workspace3 "3: VsCode"
+set $workspace1 "1: Terminals "
+set $workspace2 "2: Firefox "
+set $workspace3 "3: VsCode "
 set $workspace4 "4: Misc"
-set $workspace10 "10: Music"
+set $workspace10 "10: Music "
 
 # switch to workspace
 bindsym $mod+1 workspace $workspace1
@@ -128,7 +129,7 @@ workspace $workspace1 output DP3
 workspace $workspace2 output DP3 
 workspace $workspace3 output DP3 
 workspace $workspace4 output DP3
-workspace $workspace10 output eDP1
+workspace $workspace10 output DP3
 
 for_window [class="Spotify"] move to workspace $workspace10
 assign [class="Firefox"] $workspace2
@@ -170,10 +171,10 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        status_command i3status
-        tray_output primary
-}
+#bar {
+#        status_command i3status
+#        tray_output primary
+#}
 
 bindsym $mod+shift+x exec i3lock
 
@@ -195,3 +196,31 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute s
 bindsym XF86AudioPlay exec playerctl play-pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
+
+set $bg-color 	         #586e75 
+set $inactive-bg-color   #2f343f
+set $text-color          #fdf6e3
+set $inactive-text-color #676E7D
+set $urgent-bg-color     #E53935
+
+bar {
+     #position top
+      status_command i3status -c ~/.config/i3/i3status.conf
+      colors {
+        background #002b36
+        statusline #839496
+        separator  #586e75
+        focused_workspace  #b58900 #b58900 #002b36
+        active_workspace   #586e75 #586e75 #002b36
+        inactive_workspace #073642 #002b36 #839496
+        urgent_workspace   #dc322f #dc322f #fdf6e3
+       }
+}
+
+#Window colors
+##                      border  bg      text    indicator
+client.focused          #002b36 #586e75 #fdf6e3 #268bd2
+client.focused_inactive #002b36 #073642 #839496 #073642
+client.unfocused        #002b36 #073642 #839496 #073642
+client.urgent           #002b36 #dc322f #fdf6e3 #002b36
+
